<resources>
    <string translatable="false" name="app_name">LivePhone</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_logout">Logout</string>
    <string name="title_dialer">Dialer</string>
    <string name="empty">Empty</string>
    <string name="search">Search</string>
    <string name="url">URL</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgotpassword_question">Forgot password?</string>
    <string name="error_field_required">Field required</string>
    <string name="url_ok">URL is OK</string>
    <string name="no_connection">No connection</string>
    <string name="maintenance_mode">Maintenance mode</string>
    <string name="internal_server_error">Internal server error</string>
    <string name="oops">Oops, something went wrong</string>
    <string name="about">About</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="service_unavailable">Service unavailable</string>
    <string name="phone_number">Phone number</string>
    <string name="play_no_support">This device does not support Google Play Services</string>
    <string name="play_resolvable_problem">Oops, something is wrong with Google Play Services APK</string>
    <string name="quit">Quit</string>
    <string name="your_number">Your number</string>
    <string name="cannot_call">You can\'t make a call.</string>
    <string name="no_outgoing_numbers">You don\'t have any outgoing number.</string>
    <string name="choose_number">Choose number</string>
    <string name="callee_empty">Phone number field is empty</string>
    <string name="make_call">Make call</string>
    <string name="duration">Duration</string>
    <string name="only_one_call">Only one call at anytime!</string>
    <string name="ongoing_call">Ongoing Call</string>
    <string name="hangup">Hang up</string>
    <string name="unknown">Unknown</string>
    <string name="signals">Signals</string>
    <string name="idle">Idle</string>
    <string name="call_state_initializing">Initializing</string>
    <string name="call_state_registering">Registering</string>
    <string name="call_state_ringing">Ringing</string>
    <string name="call_state_calling">Calling</string>
    <string name="call_state_connecting">Connecting</string>
    <string name="call_state_established">Call established</string>
    <string name="call_state_call_ended">Call ended</string>
    <string name="no_number_in_contact">There is no any phone number in contact</string>
    <string name="call_hold">Call hold</string>
    <string name="call">Call</string>
    <string name="cant_reach_host">Could not reach destination host</string>
    <string name="url_not_valid">URL not valid</string>
    <string name="please_correct_url">Please correct URL</string>
    <string name="licenses">Licenses</string>
    <string name="missed_call">Missed call</string>
    <string name="status_available">Available</string>
    <string name="status_unavailable">Unavailable</string>
    <string name="action_availability">Availability</string>
    <string name="search_hint">Search contacts, agents&#8230;</string>
    <string name="outgoing_call">Outgoing call</string>
    <string name="incoming_call">Incoming call</string>
    <string name="contacts">Contacts</string>
    <string name="internal">Internal</string>
    <string name="browser_phone_message">You are logged in into browser app and calls will be redirected into this LivePhone</string>
    <string name="send_log_file">Send log</string>
    <string name="permission_reason_get_accounts">LivePhone needs this permission to manage your login account.</string>
    <string name="permission_reason_write_external_storage">LivePhone needs this permission to log anonymous data you can send them anytime to help improve this app</string>
    <string name="permission_reason_record_audio">LivePhone needs this permission to handle ongoing call</string>
    <string name="permission_reason_read_phone_state">LivePhone needs this permission to handle GSM calls properly while calling using this app</string>
    <string name="verification_code">Verification code</string>
    <string name="invalid_verification_code">Invalid verification code</string>
    <string name="google_autenticator">Enter 6-digit number from Google Authenticator application.</string>
    <string name="too_many_logins">Login declined. Wait few minutes before retrying.</string>
    <string name="invalid_credentials">Invalid email or password</string>
    <string name="permission_reason_manage_overlay">LivePhone needs this permission to show incoming call screen</string>
    <string name="manage_overlay_go_to_settings">Go to setting</string>
</resources>
