<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="15dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_dialInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:inputType="phone"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/your_number"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_outgoingNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_number"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

</LinearLayout>